# t01-burnmap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
burnmap/: app.py  auth.py  backfill.py  cli.py  fingerprint.py  loop_detect.py  outliers.py  pricing.py  pricing.yaml  watcher.py
burnmap/adapters/: __init__.py  aider.py  base.py  claude_code.py  codex.py
burnmap/api/: __init__.py  alerts.py  backfill.py  content.py  events.py  export.py  onboarding.py  outlier_review.py  overview.py  prompts.py  providers.py  quota.py  sessions.py  settings.py  tasks.py  tools.py  trace.py  web.py
burnmap/db/: __init__.py  schema.py
burnmap/normalizer/: __init__.py  versioned.py
burnmap/templates/: alerts.html  base.html  export.html  onboarding.html  outliers.html
docs/: manual.md  showcases.md
t01_burnmap/: __init__.py  cli.py  server.py
tests/: test_adapter_registry.py  test_aider_adapter.py  test_alerts_route.py  test_auth.py  test_backfill.py  test_claude_code_adapter.py  test_cline_adapter.py  test_codex_adapter.py  test_content_api.py  test_empty_states.py  test_events_api.py  test_export.py  test_fingerprint.py  test_health.py  test_hooks_api.py  test_loop_detect.py  test_onboarding.py  test_outlier_review.py  test_outliers.py  test_overview_api.py  test_pricing.py  test_prompts_api.py  test_provider_detail.py  test_providers_list.py  test_schema.py  test_sessions_api.py  test_settings_api.py  test_smoke.py  test_span_tree.py  test_statusline.py  test_tasks_api.py  test_tool_detail_api.py  test_tools_api.py  test_trace_api.py  test_versioned_normalizer.py  test_watcher.py  test_waterfall.py  test_web_routes.py
(+59 files in other folders)
