[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t01-burnmap"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
t01-burnmap = "t01_burnmap.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["t01_burnmap*"]
