[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t01-burnmap"
version = "0.1.0"
description = "Local-first AI coding agent token usage dashboard"
requires-python = ">=3.11"
dependencies = ["jinja2>=3.1", "watchdog>=4.0", "sse-starlette>=1.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "jinja2>=3.1"]

[project.scripts]
burnmap = "burnmap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["burnmap*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
